native/include/luaujava.h

LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));
// lua_getallocf is unused

// lua_ref
// lua_unref

// lua_callbacks

//
// BEGIN LUALIB WRAPPERS
//

LUA_API int luaLW_newmetatable(lua_State* L, const char* tname);
LUA_API const char* luaLW_tolstring(lua_State* L, int idx, size_t* len);
LUA_API const char* luaLW_findtable(lua_State* L, int idx, const char* fname, int szhint);
LUA_API const char* luaLW_typename(lua_State* L, int idx);
LUA_API void luaLW_typeerror(lua_State* L, int narg, const char* tname);
LUA_API void luaLW_argerror(lua_State* L, int narg, const char* extramsg);
LUA_API int luaLW_checkboolean(lua_State* L, int narg);