src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java


    private static class luaLW_newmetatable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_newmetatable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaLW_newmetatable(lua_State *L, const char *tname)
     * }
     */
    public static FunctionDescriptor luaLW_newmetatable$descriptor() {
        return luaLW_newmetatable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaLW_newmetatable(lua_State *L, const char *tname)
     * }
     */
    public static MethodHandle luaLW_newmetatable$handle() {
        return luaLW_newmetatable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaLW_newmetatable(lua_State *L, const char *tname)
     * }
     */
    public static MemorySegment luaLW_newmetatable$address() {
        return luaLW_newmetatable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaLW_newmetatable(lua_State *L, const char *tname)
     * }
     */
    public static int luaLW_newmetatable(MemorySegment L, MemorySegment tname) {
        var mh$ = luaLW_newmetatable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_newmetatable", L, tname);
            }
            return (int)mh$.invokeExact(L, tname);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_tolstring {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_tolstring");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern const char *luaLW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static FunctionDescriptor luaLW_tolstring$descriptor() {
        return luaLW_tolstring.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern const char *luaLW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MethodHandle luaLW_tolstring$handle() {
        return luaLW_tolstring.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern const char *luaLW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MemorySegment luaLW_tolstring$address() {
        return luaLW_tolstring.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern const char *luaLW_tolstring(lua_State *L, int idx, size_t *len)
     * }
     */
    public static MemorySegment luaLW_tolstring(MemorySegment L, int idx, MemorySegment len) {
        var mh$ = luaLW_tolstring.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_tolstring", L, idx, len);
            }
            return (MemorySegment)mh$.invokeExact(L, idx, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_findtable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_findtable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern const char *luaLW_findtable(lua_State *L, int idx, const char *fname, int szhint)
     * }
     */
    public static FunctionDescriptor luaLW_findtable$descriptor() {
        return luaLW_findtable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern const char *luaLW_findtable(lua_State *L, int idx, const char *fname, int szhint)
     * }
     */
    public static MethodHandle luaLW_findtable$handle() {
        return luaLW_findtable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern const char *luaLW_findtable(lua_State *L, int idx, const char *fname, int szhint)
     * }
     */
    public static MemorySegment luaLW_findtable$address() {
        return luaLW_findtable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern const char *luaLW_findtable(lua_State *L, int idx, const char *fname, int szhint)
     * }
     */
    public static MemorySegment luaLW_findtable(MemorySegment L, int idx, MemorySegment fname, int szhint) {
        var mh$ = luaLW_findtable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_findtable", L, idx, fname, szhint);
            }
            return (MemorySegment)mh$.invokeExact(L, idx, fname, szhint);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_typename {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_POINTER,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_typename");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern const char *luaLW_typename(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaLW_typename$descriptor() {
        return luaLW_typename.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern const char *luaLW_typename(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaLW_typename$handle() {
        return luaLW_typename.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern const char *luaLW_typename(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaLW_typename$address() {
        return luaLW_typename.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern const char *luaLW_typename(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaLW_typename(MemorySegment L, int idx) {
        var mh$ = luaLW_typename.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_typename", L, idx);
            }
            return (MemorySegment)mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_typeerror {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_typeerror");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaLW_typeerror(lua_State *L, int narg, const char *tname)
     * }
     */
    public static FunctionDescriptor luaLW_typeerror$descriptor() {
        return luaLW_typeerror.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaLW_typeerror(lua_State *L, int narg, const char *tname)
     * }
     */
    public static MethodHandle luaLW_typeerror$handle() {
        return luaLW_typeerror.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaLW_typeerror(lua_State *L, int narg, const char *tname)
     * }
     */
    public static MemorySegment luaLW_typeerror$address() {
        return luaLW_typeerror.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaLW_typeerror(lua_State *L, int narg, const char *tname)
     * }
     */
    public static void luaLW_typeerror(MemorySegment L, int narg, MemorySegment tname) {
        var mh$ = luaLW_typeerror.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_typeerror", L, narg, tname);
            }
            mh$.invokeExact(L, narg, tname);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_argerror {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_argerror");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaLW_argerror(lua_State *L, int narg, const char *extramsg)
     * }
     */
    public static FunctionDescriptor luaLW_argerror$descriptor() {
        return luaLW_argerror.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaLW_argerror(lua_State *L, int narg, const char *extramsg)
     * }
     */
    public static MethodHandle luaLW_argerror$handle() {
        return luaLW_argerror.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaLW_argerror(lua_State *L, int narg, const char *extramsg)
     * }
     */
    public static MemorySegment luaLW_argerror$address() {
        return luaLW_argerror.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaLW_argerror(lua_State *L, int narg, const char *extramsg)
     * }
     */
    public static void luaLW_argerror(MemorySegment L, int narg, MemorySegment extramsg) {
        var mh$ = luaLW_argerror.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaLW_argerror", L, narg, extramsg);
            }
            mh$.invokeExact(L, narg, extramsg);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaLW_checkboolean {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaLW_checkboolean");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaLW_checkboolean(lua_State *L, int narg)
     * }
     */
    public static FunctionDescriptor luaLW_checkboolean$descriptor() {
        return luaLW_checkboolean.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaLW_checkboolean(lua_State *L, int narg)
     * }
     */
    public static MethodHandle luaLW_checkboolean$handle() {
        return luaLW_checkboolean.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaLW_checkboolean(lua_State *L, int narg)
     * }
     */
    public static MemorySegment luaLW_checkboolean$address() {
        return luaLW_checkboolean.ADDR;
    }
